# site

./: 404.html  CNAME  README.md  _version.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/en/: index.md  schemas.md
en/: index.html
en/DATA_SOURCES/: index.html
en/concepts/interoperability/: index.html
en/concepts/normalization/: index.html
en/concepts/related-domains/: index.html
en/concepts/research-adoption/: index.html
en/examples/: index.html
en/examples/entity-with-snfei/: index.html
en/governance/cep-foundational-principles/: index.html
en/governance/evolution-policy-and-versioning/: index.html
en/governance/objectives-and-vision/: index.html
en/governance/vocabulary-process/: index.html
en/quick-start/: index.html
en/reference/compatibility-matrix/: index.html
en/reference/reference-projects/: index.html
en/reference/reference-standards/: index.html
en/reference/w3c-prov/: index.html
en/schemas/: index.html
en/specs/: index.html
en/specs/aas-v1/: index.html
en/specs/cdira-v1/: index.html
en/specs/cec-v1/: index.html
en/specs/efs-v1/: index.html
en/specs/gic-v1/: index.html
en/specs/gns-v1/: index.html
en/specs/vgs-v1/: index.html
search/: search_index.json
